docs: update README

--- a/examples/simple-deep-research/templates/report-template.html
+++ b/examples/simple-deep-research/templates/report-template.html
@@ -197,7 +197,7 @@
     
     <footer>
         <div class="container">
-            <p>此报告由 Astack 深度研究工具自动生成</p>
+            <p>此报告由 AStack 深度研究工具自动生成</p>
             <p class="date-generated">生成时间: {{generatedDate}}</p>
         </div>
     </footer>
